--- a/pages/iPad.html
+++ b/pages/iPad.html
@@ -61,7 +61,7 @@
             <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
           </div>
           <div class="login-icon">
-            <a href="../pages/account.html">
+            <a href="./account.html">
               <img
                 src="../assets/images/NguyenDucVu_241230896/header_image/login-icon.png"
                 alt="login icon"
@@ -69,36 +69,26 @@
               />
             </a>
             <div class="login-dropdown-for-destop">
-              <a href="../pages/login.html">Đăng nhập</a>
-              <a href="./pages/register.html">Đăng ký</a>
+              <a href="./login.html">Đăng nhập</a>
+              <a href="/register.html">Đăng ký</a>
             </div>
           </div>
           <div class="menu-for-mobile">
             <i class="fa-solid fa-bars menu-btn" style="color: #ffffff"></i>
             <div class="drop-down-menu-for-mobile">
               <ul class="menu-mobile">
-                <li><a href="" class="menu-mobile-link">Trang chủ</a></li>
-                <li><a href="" class="menu-mobile-link">iPhone</a></li>
-                <li><a href="iPad.html" class="menu-mobile-link">iPad</a></li>
-                <li><a href="Mac.html" class="menu-mobile-link">Mac</a></li>
-                <li><a href="watch.html" class="menu-mobile-link">Watch</a></li>
-                <li>
-                  <a href="phu_kien.html" class="menu-mobile-link">Phụ Kiện</a>
-                </li>
-                <li><a href="" class="menu-mobile-link">Âm Thanh</a></li>
-                <li><a href="" class="menu-mobile-link">Camera</a></li>
-                <li><a href="" class="menu-mobile-link">Gia Dụng</a></li>
-                <li><a href="" class="menu-mobile-link">Tin Tức</a></li>
-                <li>
-                  <a href="./pages/login.html" class="menu-mobile-link"
-                    >Đăng Nhập</a
-                  >
-                </li>
-                <li>
-                  <a href="./pages/register.html" class="menu-mobile-link"
-                    >Đăng Ký</a
-                  >
-                </li>
+                <li><a href="../index.html" class="menu-mobile-link">Trang chủ</a></li>
+                <li><a href="./iphone.html" class="menu-mobile-link">iPhone</a></li>
+                <li><a href=",/iPad.html" class="menu-mobile-link">iPad</a></li>
+                <li><a href="./Mac.html" class="menu-mobile-link">Mac</a></li>
+                <li><a href="./watch.html" class="menu-mobile-link">Watch</a></li>
+                <li><a href="./phu_kien.html" class="menu-mobile-link">Phụ Kiện</a></li>
+                <li><a href="./earphone.html" class="menu-mobile-link">Âm Thanh</a></li>
+                <li><a href="./camera.html" class="menu-mobile-link">Camera</a></li>
+                <li><a href="./giadung.html" class="menu-mobile-link">Gia Dụng</a></li>
+                <li><a href="./tintuc.html" class="menu-mobile-link">Tin Tức</a></li>
+                <li><a href="/login.html" class="menu-mobile-link">Đăng Nhập</a></li>
+                <li><a href="/register.html" class="menu-mobile-link">Đăng Ký</a></li>
               </ul>
             </div>
             <div class="overlay"></div>
@@ -106,17 +96,15 @@
         </div>
         <div class="header-navbar-for-desktop">
           <ul class="top-menu-not-mobile">
-            <li class="category-menu-items"><a href="">iPhone</a></li>
-            <li class="category-menu-items"><a href="iPad.html">iPad</a></li>
-            <li class="category-menu-items"><a href="Mac.html">Mac</a></li>
-            <li class="category-menu-items"><a href="watch.html">Watch</a></li>
-            <li class="category-menu-items">
-              <a href="phu_kien.html">Phụ kiện</a>
-            </li>
-            <li class="category-menu-items"><a href="">Âm thanh</a></li>
-            <li class="category-menu-items"><a href="">Camera</a></li>
-            <li class="category-menu-items"><a href="">Gia dụng</a></li>
-            <li class="category-menu-items"><a href="">Tin tức</a></li>
+            <li class="category-menu-items"><a href="./iphone.html">iPhone</a></li>
+            <li class="category-menu-items"><a href="./iPad.html">iPad</a></li>
+            <li class="category-menu-items"><a href="./Mac.html">Mac</a></li>
+            <li class="category-menu-items"><a href="./watch.html">Watch</a></li>
+            <li class="category-menu-items"><a href="./phu_kien.html">Phụ kiện</a></li>
+            <li class="category-menu-items"><a href="./earphone.html">Âm thanh</a></li>
+            <li class="category-menu-items"><a href="./camera.html">Camera</a></li>
+            <li class="category-menu-items"><a href="./giadung.html">Gia dụng</a></li>
+            <li class="category-menu-items"><a href="./tintuc.html">Tin tức</a></li>
           </ul>
         </div>
       </header>
@@ -126,19 +114,19 @@
           <div class="carousel-wrapper">
             <div id="carousel" class="carousel">
               <div id="slides" class="slides">
-                <a href="./pages/iPhone.html" target="">
+                <a href="/iPhone.html" target="">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/iPad/danh mục-ipd_Danh mục copy.png"
                     alt="Khám phá công nghệ AI"
                   />
                 </a>
-                <a href="../pages/iPhone.html" target="">
+                <a href="./iPhone.html" target="">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/iPad/danh mục-ipd_Danh mục copy 2.png"
                     alt="Tương lai của lập trình web"
                   />
                 </a>
-                <a href="../pages/iPhone.html" target="">
+                <a href="./iPhone.html" target="">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Carousel_banner_images/iPad/danh mục-ipd_Danh mục copy 3.png"
                     alt="Thiết kế giao diện tối giản"
